woked with weather dates

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="col">
           <h2>Search for a City:</h2>
           <input type="text" class="form-control" id="search-inpurt" placeholder="Hyderabad" />
-          <p class="error-messge" style="display:none;"></p>
+          <p class="error-messge" ></p>
           <button type="submit" class="btn " id="search-button" >Search</button>
         </div>
       </div>
@@ -42,40 +42,40 @@
         </div>
         <div class="row" id="bottomcard">
           <div class="col-lg-2 weatherday">
-            <p id="date1">10/11/2021</p>
-            <P id="temp1">temp:</P>
-            <img id="img1" src="" alt="img"></img>
-            <P id="wind1">wind:</P>
-            <P id="humidity1">humidity:</P>
+            <p id="date1" class="dates">10/11/2021</p>
+            <P id="temp1"class="temps">temp:</P>
+            <img id="img1" src="" alt="img"class="climateimg"></img>
+            <P id="wind1"class="winds">wind:</P>
+            <P id="humidity1"class="humidits">humidity:</P>
           </div>
           <div class="col-lg-2 weatherday">
-            <p id="date2">10/11/2021</p>
-            <P id="temp2">temp:</P>
-            <img id="img2" src="" alt="img"></img>
-            <P id="wind2">wind:</P>
-            <P id="humidity2">humidity:</P>
+            <p id="date2"class="dates">10/11/2021</p>
+            <P id="temp2"class="temps">temp:</P>
+            <img id="img2" src="" alt="img"class="climateimg"></img>
+            <P id="wind2"class="winds">wind:</P>
+            <P id="humidity2"class="humidits">humidity:</P>
 
           </div>
           <div class="col-lg-2 weatherday">
-            <p id="date3">10/11/2021</p>
-            <P id="temp3">temp:</P>
-            <img id="img3" src="" alt="img"></img>
-            <P id="wind3">wind:</P>
-            <P id="humidity3">humidity:</P>
+            <p id="date3" class="dates">10/11/2021</p>
+            <P id="temp3"class="temps">temp:</P>
+            <img id="img3" src="" alt="img"class="climateimg"></img>
+            <P id="wind3"class="winds">wind:</P>
+            <P id="humidity3"class="humidits">humidity:</P>
           </div>
           <div class="col-lg-2 weatherday">
-            <p id="date4">10/11/2021</p>
-            <P id="temp4">temp:</P>
-            <img id="img4" src="" alt="img"></img>
-            <P id="wind4">wind:</P>
-            <P id="humidity4">humidity:</P>
+            <p id="date4"class="dates">10/11/2021</p>
+            <P id="temp4"class="temps">temp:</P>
+            <img id="img4" src="" alt="img"class="climateimg"></img>
+            <P id="wind4"class="winds">wind:</P>
+            <P id="humidity4"class="humidits">humidity:</P>
           </div>
           <div class="col-lg-2 weatherday ">
-            <p id="date5">10/11/2021</p>
-            <P id="temp5">temp:</P>
-            <img id="img5" src="" alt="img"></img>
-            <P id="wind5">wind:</P>
-            <P id="humidity5">humidity:</P>
+            <p id="date5"class="dates">10/11/2021</p>
+            <P id="temp5"class="temps">temp:</P>
+            <img id="img5" src="" alt="img" class="climateimg"></img>
+            <P id="wind5"class="winds">wind:</P>
+            <P id="humidity5"class="humidits">humidity:</P>
           </div>
         </div>
       </div>
