--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="col">
           <h2>Search for a City:</h2>
           <input type="text" class="form-control" id="search-inpurt" placeholder="Hyderabad" />
-          <p class="error-messge" ></p>
-          <button type="submit" class="btn " id="search-button" >Search</button>
+          <p class="error-messge"></p>
+          <button type="submit" class="btn " id="search-button">Search</button>
         </div>
       </div>
       <div class="col-lg-8" id="rightcard">
@@ -41,14 +41,29 @@
           <P>UV index:<span id="uv-index" class="fontsize"></span></P>
         </div>
         <div class="row" id="bottomcard">
-          <div class="col-lg-2 weatherday">
-            <p id="date1" class="dates">10/11/2021</p>
-            <P id="temp1"class="temps">temp:</P>
-            <img id="img1" src="" alt="img"class="climateimg"></img>
-            <P id="wind1"class="winds">wind:</P>
-            <P id="humidity1"class="humidits">humidity:</P>
-          </div>
-          <div class="col-lg-2 weatherday">
+
+        </div>
+      </div>
+    </div>
+  </main>
+  <script src=" https://code.jquery.com/jquery-3.5.1.min.js"> </script>
+  <script src="script.js">
+  </script>
+</body>
+
+</html>
+
+
+
+
+<!-- <div class="col-lg-2 weatherday">
+            <p id="date" class="dates">10/11/2021</p>
+            <P id="temp"class="temps">temp:</P>
+            <img id="img" src="" alt="img"class="climateimg"></img>
+            <P id="wind"class="winds">wind:</P>
+            <P id="humidity"class="humidits">humidity:</P>
+          </div> --> -->
+          <!-- <div class="col-lg-2 weatherday">
             <p id="date2"class="dates">10/11/2021</p>
             <P id="temp2"class="temps">temp:</P>
             <img id="img2" src="" alt="img"class="climateimg"></img>
@@ -76,14 +91,4 @@
             <img id="img5" src="" alt="img" class="climateimg"></img>
             <P id="wind5"class="winds">wind:</P>
             <P id="humidity5"class="humidits">humidity:</P>
-          </div>
-        </div>
-      </div>
-    </div>
-  </main>
-  <script src=" https://code.jquery.com/jquery-3.5.1.min.js"> </script>
-  <script src="script.js">
-  </script>
-</body>
-
-</html>
+          </div> -->
