added append to the forloop

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <main>
     <div class="row" id="weathercard">
       <div class="col-lg-4" id="leftcard">
-        <div class="col">
+        <form class="col">
           <h2>Search for a City:</h2>
           <input type="text" class="form-control" id="search-inpurt" placeholder="Hyderabad" />
           <p class="error-messge"></p>
           <button type="submit" class="btn " id="search-button">Search</button>
-        </div>
+        </form>
       </div>
       <div class="col-lg-8" id="rightcard">
         <div id="weatherreport">
@@ -41,7 +41,13 @@
           <P>UV index:<span id="uv-index" class="fontsize"></span></P>
         </div>
         <div class="row" id="bottomcard">
-
+          <!-- <div class="col-lg-2 weatherday">
+            <p id="date" class="dates">10/11/2021</p>
+            <img id="img" src="" alt="img"class="climateimg"></img>
+            <P id="temp"class="temps">temp:</P>
+            <P id="wind"class="winds">wind:</P>
+            <P id="humidity"class="humidits">humidity:</P>
+          </div> --> -->
         </div>
       </div>
     </div>
